Update .config/nvim/lua/keymap.lua Update .zshrc Change attributes of .gitconfig

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,5 +1,6 @@
 [user]
 	name = rockcutter
+	email = {{ .email }}
 [alias]
 	sw = switch
 	swf = "!f () { git switch $(git --no-pager branch --sort=-committerdate | fzf); };f"
