Update .gitconfig Update .zshrc

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -5,7 +5,7 @@
 	sw = switch
 	swf = "!f () { git switch $(git --no-pager branch --sort=-committerdate | fzf); };f"
 	s = status
-	ss = status -s
+	ss = status -s -u
 	s = switch
 	cm = commit
 	cmm = commit -m
