--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -3,6 +3,7 @@
 	email = {{ .email }}
 [alias]
 	a = "!f() { git add \"$@\" && git status -s -u; }; f"
+	add = "!f() { git add \"$@\" && git status -s -u; }; f"
 	sw = switch
 	swf = "!f () { git switch $(git --no-pager branch --sort=-committerdate | fzf); };f"
 	s = status
